feat(campaign): link campaigns with segment targets (#186)
