# backend/src/main/kotlin/com/manage/crm/event/controller/request/PostCampaignRequest.kt
@@ -2,7 +2,8 @@ package com.manage.crm.event.controller.request
 
 data class PostCampaignRequest(
     val name: String,
-    val properties: List<PostCampaignPropertyDto>
+    val properties: List<PostCampaignPropertyDto>,
+    val segmentIds: List<Long> = emptyList()
 )
 
 data class PostCampaignPropertyDto(
